--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "joi": "^17.8.3",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^6.9.2",
     "morgan": "~1.9.1"
   }
 }
